[gd_scene load_steps=2 format=3 uid="uid://x423e4hf1jug"]

[ext_resource type="Script" uid="uid://b0iaqbyc2mpd6" path="res://scripts/save_file_menu.gd" id="1_kdog4"]

[node name="Save File Menu" type="Node2D"]
script = ExtResource("1_kdog4")

[node name="Button" type="Button" parent="."]
offset_left = 63.0
offset_top = 496.0
offset_right = 377.0
offset_bottom = 612.0

[node name="Button2" type="Button" parent="."]
offset_left = 210.0
offset_top = 330.0
offset_right = 524.0
offset_bottom = 446.0

[node name="Button3" type="Button" parent="."]
offset_left = 604.0
offset_top = 334.0
offset_right = 918.0
offset_bottom = 450.0

[node name="Button4" type="Button" parent="."]
offset_left = 744.0
offset_top = 492.0
offset_right = 1058.0
offset_bottom = 608.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 109.0
offset_top = 165.0
offset_right = 913.0
offset_bottom = 532.0
text = "Save File:





								2																							3






1																																									4"
